# Horsegenetics

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  GAME_INTEGRATION.md  HORSE_GENETICS_REFERENCE.md  LICENSE  README.md  USERS.md  docker-compose.yml  horse_genetics.py  horse_genetics_gui.py  pyproject.toml  requirements.txt  streamlit_app.py  test_docker_build.py  test_genetics.py  test_performance.py  visualize_horse.py
.github/ISSUE_TEMPLATE/: bug-report.md  using-this-project.md
.github/workflows/: ci.yml  docker-build.yml
.streamlit/: config.toml
api/: __init__.py  main.py
genetics/: __init__.py  breed_presets.py  breeding.py  breeding_stats.py  core.py  gene_definitions.py  gene_interaction.py  gene_registry.py  horse.py  io.py  pedigree.py  phenotype.py  validation.py  visualizer.py
locales/: en.json  fi.json
