[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "horse-genetics"
version = "2.0.0"
description = "Scientifically accurate horse coat color genetics simulator with fluent API"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
keywords = ["horse", "genetics", "genetics-simulator", "mendelian-inheritance", "breeding", "coat-color"]
authors = [
    {name = "Horse Genetics Contributors"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Games/Entertainment :: Simulation",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = []

[project.optional-dependencies]
gui = []  # tkinter is part of standard library
dev = ["pytest>=7.0"]

[project.urls]
"Homepage" = "https://github.com/Metroseksuaali/Horsegenetics"
"Bug Tracker" = "https://github.com/Metroseksuaali/Horsegenetics/issues"

[project.scripts]
horse-genetics = "horse_genetics:main"

[tool.setuptools.packages.find]
include = ["genetics*"]

[tool.setuptools.package-data]
genetics = ["py.typed"]
